[+] plxShow::tagList - ajout des variables #tag_count, #tag_item (contribution danielsan)
[+] #126: plxShow::staticInclude - l'affichage tient compte si la page est active ou non
[+] plxDate::formatDate() - ajout de la variable #time
[+] #68: Sitemap - datation des pages statiques
[+] Optimisation de la taille des images (contribution Syl)
BUG fix #101: Thème par défaut - problème de retour à la ligne dans l'affichage des tags 
BUG fix #102: Thème par défaut - la sidebar passe dans le footer après désactivation du captcha
BUG fix #103: La recherche dans les articles ne fonctionne dans l'administration pas à partir du champ "Rechercher"
BUG fix #104: Message d'erreur lorsqu'on essaye d’accéder à une page statique non active
BUG fix #108: Changement de langue non pris en compte sur l'écran d'installation
BUG fix #109: Édition page statique: disparition de champs
BUG fix #112: Encodage des caractères sur le titre d'un article sur la page d'administration (plxUtils::strCut)
BUG fix #122: Mauvais affichage du lien "Visualiser" sur la page d'accueil des articles de l'administration
BUG fix #125: Bug affichage flux RSS d'une catégorie
BUG Administration > Paramètres > Edition des fichiers du thème : impossible de sauvegarder les modifications 

## PLUXML 5.4 (sortie : 13/07/2015) ##

[+] Nouveau thème par défaut
[+] Nouvelle interface d'administration en responsive design
[+] Aménagement du gestionnaire de médias
[+] Ajout traduction en occitan (contribution Rubén)
[+] Correction traduction de l'italien (contribution nikynik)
[+] Lien en nofollow pour les auteurs des commentaires
[+] issue #76: plxShow::lastComList affichage du titre de l'article des commentaires avec la variable #com_art_title (contribution Suricat)
[+] issue #73: Formatage des jours sur 1 ou 2 chiffres avec les variables #num_day(1) ou #num_day(2)