@@ -26,7 +26,8 @@
 [+] plxDate::formatDate() - ajout de la variable #time
 [+] #68: Sitemap - datation des pages statiques
 [+] Optimisation de la taille des images (contribution Syl)
-BUG fix #101: Thème par défaut - problème de retour à la ligne dans l'affichage des tags 
+[+] Ajout de la variable #art_thumbnail à la fonction plxShow::lastArtList
+BUG fix #101: Thème par défaut - problème de retour à la ligne dans l'affichage des tags
 BUG fix #102: Thème par défaut - la sidebar passe dans le footer après désactivation du captcha
 BUG fix #103: La recherche dans les articles ne fonctionne dans l'administration pas à partir du champ "Rechercher"
 BUG fix #104: Message d'erreur lorsqu'on essaye d’accéder à une page statique non active
@@ -35,7 +36,7 @@ BUG fix #109: Édition page statique: disparition de champs
 BUG fix #112: Encodage des caractères sur le titre d'un article sur la page d'administration (plxUtils::strCut)
 BUG fix #122: Mauvais affichage du lien "Visualiser" sur la page d'accueil des articles de l'administration
 BUG fix #125: Bug affichage flux RSS d'une catégorie
-BUG Administration > Paramètres > Edition des fichiers du thème : impossible de sauvegarder les modifications 
+BUG Administration > Paramètres > Edition des fichiers du thème : impossible de sauvegarder les modifications
 
 ## PLUXML 5.4 (sortie : 13/07/2015) ##
 
